--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -47,6 +47,15 @@ stages:
       workingDirectory: $(projectRoot)
       displayName: "Install requirements"
 
+    - script: |
+        python -m venv antenv
+        source antenv/bin/activate
+        python -m pip install --upgrade pip
+        make install
+        make lint
+      workingDirectory: $(projectRoot)
+      displayName: "Run Lint tests"
+
     - task: ArchiveFiles@2
       displayName: 'Archive files'
       inputs:
